<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orderingFromXml="true"
    android:persistent="true" >

    <PreferenceCategory android:title="@string/preference_category_general" >
        <ListPreference
            android:defaultValue="@string/preference_sensor_source_default_value"
            android:dialogTitle="@string/preference_sensor_source_title"
            android:entries="@array/preference_sensor_source_entries"
            android:entryValues="@array/preference_sensor_source_entries"
            android:key="@string/preference_sensor_source_key"
            android:summary="@string/preference_sensor_source_summary"
            android:title="@string/preference_sensor_source_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/preference_category_temperature" >
        <ListPreference
            android:defaultValue="@string/preference_temperature_unit_default_value"
            android:dialogTitle="@string/preference_temperature_unit_title"
            android:entries="@array/preference_temperature_unit_entries"
            android:entryValues="@array/preference_temperature_unit_entries"
            android:key="@string/preference_temperature_unit_key"
            android:summary="@string/preference_temperature_unit_summary"
            android:title="@string/preference_temperature_unit_title" />
        
        <nl.wiegman.weatherstation.preference.MinimumTemperatureAlarmPreference
            android:summary="@string/preference_minimum_temperature_alarm_summary"
            android:title="@string/preference_minimum_temperature_alarm_title" />

        <nl.wiegman.weatherstation.preference.MaximumTemperatureAlarmPreference
            android:summary="@string/preference_maximum_temperature_alarm_summary"
            android:title="@string/preference_maximum_temperature_alarm_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/preference_category_appearance" >
        <ListPreference
            android:defaultValue="@string/preference_theme_default_value"
            android:dialogTitle="@string/preference_theme_title"
            android:entries="@array/preference_theme_entries"
            android:entryValues="@array/preference_theme_entries"
            android:key="@string/preference_theme_key"
            android:summary="@string/preference_theme_summary"
            android:title="@string/preference_theme_title" />
        
        <CheckBoxPreference
            android:title="@string/preference_keep_screen_on_title"
            android:key="@string/preference_keep_screen_on_key"
            android:summary="@string/preference_keep_screen_on_summary"
            android:defaultValue="@string/preference_keep_screen_on_default_value" />
    </PreferenceCategory>
</PreferenceScreen>